resources/rhsso-production/00_namespace_rhsso-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  name: rhsso-prod
spec: {}
