resources/rhsso-production/05_rh-sso-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  name: rhsso
  namespace: rhsso-prod
  labels:
    app: keycloak
spec:
  to:
    kind: Service
    name: keycloak
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  path: /
  port:
    targetPort: keycloak
